@@ -2,8 +2,6 @@ package com.samsamhajo.deepground.qna.answer.service;
 
 import com.nimbusds.oauth2.sdk.util.CollectionUtils;
 import com.samsamhajo.deepground.global.upload.S3Uploader;
-import com.samsamhajo.deepground.global.upload.exception.UploadErrorCode;
-import com.samsamhajo.deepground.global.upload.exception.UploadException;
 import com.samsamhajo.deepground.media.MediaUtils;
 import com.samsamhajo.deepground.qna.answer.entity.Answer;
 import com.samsamhajo.deepground.qna.answer.entity.AnswerMedia;
@@ -14,36 +12,62 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static com.samsamhajo.deepground.media.MediaUtils.getExtension;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class AnswerMediaService {
 
     private final AnswerMediaRepository answerMediaRepository;
     private final S3Uploader s3Uploader;
 
-    @Transactional
-    public void createAnswerMedia(Answer answer, List<MultipartFile> mediaFiles) {
-        if (CollectionUtils.isEmpty(mediaFiles)) return;
 
-        List<AnswerMedia> mediaEntities = mediaFiles.stream()
+    public List<String> createAnswerMedia(Answer answer, List<MultipartFile> images) {
+        if (images == null || images.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        List<AnswerMedia> mediaEntities = images.stream()
                 .map(file -> {
                     String url = s3Uploader.upload(file, "answer-media");
                     String extension = getExtension(file.getOriginalFilename());
                     return AnswerMedia.of(url, extension, answer);
                 })
-                .toList();
+                .collect(Collectors.toList());
+
         answerMediaRepository.saveAll(mediaEntities);
+        return mediaEntities.stream().map(AnswerMedia::getMediaUrl).toList();
     }
 
-    @Transactional
     public void deleteAnswerMedia(Long answerId) {
-        List<AnswerMedia> answerMedia = answerMediaRepository.findAllByAnswerId(answerId);
-        answerMedia.forEach(content -> MediaUtils.deleteMedia(content.getAnswerCommentUrl()));
+        List<AnswerMedia> answerMediaList = answerMediaRepository.findAllByAnswerId(answerId);
+
+        if (answerMediaList.isEmpty()) {
+            // 미디어 없으면 아무 것도 하지 않고 그냥 return
+            return;
+        }
+
+        // S3 등 외부 저장소 미디어 삭제
+        answerMediaList.forEach(media -> {
+            try {
+                MediaUtils.deleteMedia(media.getMediaUrl());
+            } catch (Exception e) {
+
+            }
+        });
+
+        // DB에서 연관 미디어 삭제
         answerMediaRepository.deleteAllByAnswerId(answerId);
+    }
+
+    public Optional<AnswerMedia> findByMediaUrl(String mediaUrl) {
+        return answerMediaRepository.findByMediaUrl(mediaUrl);
     }
 
 }
